[project]
name = "responsegen"
version = "0.1"
description = "Generate response sheets for academic paper revisions based on highlighted pdfs."
authors = [{name = "Julian Prester", email = "hi@julianprester.com"}]
readme = "README.md"
dependencies = [
  "pymupdf",
  "click",
  "python-docx",
  "pydantic"
]

[project.scripts]
responsegen = "responsegen.cli:main"

[tool.setuptools]
packages = ["responsegen"]